--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 	<head>
-		<title>My first Three.js app</title>
+		<title>Lights</title>
 		<style>
 			body { margin: 0; }
 			canvas { width: 100%; height: 100%; }
@@ -10,5 +10,5 @@
 		<script src="js/three.min.js"></script>
 		<script src="js/OrbitControls.js"></script>
 		<script src="js/lights.js"></script>
-		</body>
+	</body>
 </html>
